--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 body {
   margin: 0;
+  text-align:center;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
@@ -13,6 +16,12 @@ code {
 .status {
   height: 20px;
   width: 20px;
+  border-radius:200px;
+  position:absolute;
+  top:10px;
+  right:10px;
+
+
 }
 .green {
   background-color: green;
@@ -20,4 +29,63 @@ code {
 
 .red {
   background-color: red;
+}
+
+button{
+		padding:5px 10px;
+		background-color:white;
+		border:1px solid gray;
+		border-radius:20px;
+		cursor:pointer;
+		margin:30px;
+
+
+
+}
+input{
+		padding:5px 10px;
+		background-color:white;
+		border:1px solid gray;
+		border-radius:20px;
+
+}
+.no{
+		font-size:20px;
+		color:#707070;
+		margin-top:40vh;
+
+
+
+}
+.stream_con{
+		border:1px solid #707070;
+		margin:100px;
+		text-align:center;
+		position:relative;
+		padding-top:20px;
+		width:400px;
+}
+.options{
+		position:absolute;
+		top:10vh;
+		right:30px;
+		width:70vw;
+		display:flex;
+		flex-direction:row;
+		justify-content:space-evenly;
+
+
+
+}
+
+.op{
+		border:1px solid #707070;
+		display:flex;
+		flex-direction:column;
+		padding:50px;
+		border-radius:20px;
+
+
+
+
 }
